--- a/README
+++ b/README
@@ -10,6 +10,7 @@ This is a fork of dmenu - suckless project at:
 Added Features
 --------------
 * dmenu_win    Displays a list of window titles instead of commands and then switches to selected window
+* lines        Default value of lines in config.def.h is now set to 10. Originally it was 0.
 
 Requirements
 ------------
