Added dmenu_vol to Makefile and readme and made volume menu horizontal

--- a/README
+++ b/README
@@ -10,12 +10,14 @@ This is a fork of dmenu - suckless project at:
 Added Features
 --------------
 * dmenu_win    Displays a list of window titles instead of commands and then switches to selected window
+* dmenu_vol    Displays volume percentages from 0 to 100% and sends it to amixer to set 'Master' channel
 * lines        Default value of lines in config.def.h is now set to 10. Originally it was 0.
 
 Requirements
 ------------
 In order to build dmenu you need the Xlib header files.
 In order to run dmenu_win you need wmctrl utility installed.
+In order to run dmenu_vol you need alsa_utils installed.
 
 
 Installation
